src/objects/Brackets_Round__c.object
<CustomObject>
    <fields>
        <fullName>Brackets_Tournament__c</fullName>
        <label>Tournament</label>
        <referenceTo>Brackets_Tournament__c</referenceTo>
        <relationshipLabel>Rounds</relationshipLabel>
        <relationshipName>Rounds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>Last date to make predictions for the round.</inlineHelpText>
        <label>Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <inlineHelpText>End date of the round, calculated with the date of the last match.</inlineHelpText>
        <label>End</label>
        <summarizedField>Brackets_Match__c.Schedule__c</summarizedField>
        <summaryForeignKey>Brackets_Match__c.Brackets_Round__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinScheduleBrackets_Match__c</fullName>
        <label>MinScheduleMatch</label>
        <summarizedField>Brackets_Match__c.Schedule__c</summarizedField>
        <summaryForeignKey>Brackets_Match__c.Brackets_Round__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RoundNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number indicating the position of the round, being 1 the first round</inlineHelpText>
        <label>Round Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScorePoints__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Points a user wins for each correct prediction in the round</inlineHelpText>
        <label>Score Points</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <inlineHelpText>Start date of the round, calculated with the date of the first match.</inlineHelpText>
        <label>Start</label>
        <summarizedField>Brackets_Match__c.Schedule__c</summarizedField>
        <summaryForeignKey>Brackets_Match__c.Brackets_Round__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Round</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DeadlineBeforeSchedule</fullName>
        <active>true</active>
        <errorConditionFormula>Deadline__c  &gt; MinScheduleBrackets_Match__c</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>This date is greater than their matches&apos;s schedule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DeadlineBeforeStart</fullName>
        <active>true</active>
        <description>The deadline must be before the first game</description>
        <errorConditionFormula>and (
!isblank(Deadline__c),
!isblank(Start__c),
Deadline__c &gt; Start__c )</errorConditionFormula>
        <errorMessage>The deadline must be before the first game (round)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PositiveScorePoints</fullName>
        <active>true</active>
        <description>The score points must be a positive integer</description>
        <errorConditionFormula>ScorePoints__c &lt; 0</errorConditionFormula>
        <errorMessage>Score points must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PositveRoundNumber</fullName>
        <active>true</active>
        <description>The round number must be positive</description>
        <errorConditionFormula>RoundNumber__c &lt; 0</errorConditionFormula>
        <errorMessage>The round number must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RoundNumberNotUpdateable</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  ISCHANGED( RoundNumber__c )</errorConditionFormula>
        <errorDisplayField>RoundNumber__c</errorDisplayField>
        <errorMessage>This field is not updatable.</errorMessage>
    </validationRules>
</CustomObject>